# youtube-automation

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check_accounts.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_user_model.py  (+53 more)
backend/app/: __init__.py  main.py
backend/docs/: NOTIFICATION_INTEGRATION.md  PAYMENT_GATEWAYS.md
backend/scripts/: backup_database.py  check_failed_transactions.py  check_gateway_timestamps.py  check_live_events.py  check_midtrans_creds.py  check_midtrans_db.py  check_notification_logs.py  check_subscription.py  check_video_sizes.py  configure_midtrans.py  configure_paypal.py  configure_stripe.py  configure_xendit.py  convert_mov_to_mp4.py  create_database.bat  create_database.py  create_default_notification_preferences.py  create_default_tos.py  create_free_subscriptions.py  debug_usage.py  fix_gateway_json_data.py  fix_paypal_transaction.py  fix_subscription_period.py  fix_yearly_subscription.py  migrate_video_library.py  reset_admin_password.py  run_billing_tasks.py  run_celery.bat  run_celery_all.bat  run_celery_beat.bat  run_celery_beat_prod.sh  run_celery_prod.sh  run_dev.bat  run_migrations.bat  run_notification_tasks.py  run_tests.bat  seed_all.bat  seed_all.py  seed_announcements.bat  seed_announcements.py  (+27 more)
backend/supervisor/: celery.conf
backend/systemd/: celery-beat.service  celery-worker.service
backend/tests/: __init__.py  conftest.py
(+657 files in other folders)
